<resources>
    <!-- Sign in/up feature -->
    <string name="app_name">LIM</string>
    <string name="app_description">Start keeping track of the expiration date of your products</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="forgot_password">Forgot your password?</string>
    <string name="not_have_account">Don\'t have an account?</string>
    <string name="contact_us_via">Contact us via</string>
    <string name="create_account">Create account</string>
    <string name="enter_your_name_here">Enter your name here</string>
    <string name="enter_your_email_here">Enter your email here</string>
    <string name="enter_your_password_here">Enter your password here</string>
    <string name="or">or</string>
    <string name="sign_up_with">Sign up with</string>
    <string name="sign_in_with">Sign in with</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="welcome_back">Welcome back</string>
    <string name="skip_sign_in">Skip for now</string>
    <string name="title_activity_main">MainActivity</string>
    <!-- Main feature -->
    <string name="title_home">Home</string>
    <string name="title_scan">Scan</string>
    <string name="title_storage">Storage</string>
    <string name="title_account">Account</string>
    <string name="unexpected_error_occur">Unexpected error has occurred</string>
    <string name="category_foods">Foods</string>
    <string name="category_cosmetics">Cosmetics</string>
    <string name="category_medicines">Medicines</string>
    <string name="all_products_good">All your products are good</string>
    <string name="search_product">Search product</string>
    <string name="number_products">%d products</string>
    <string name="one_product">1 product</string>

    <string-array name="categories_array">
        <item>Foods</item>
        <item>Cosmetics</item>
        <item>Medicines</item>
    </string-array>
    <string-array name="units_array">
        <item>cái</item>
        <item>chai</item>
        <item>củ</item>
        <item>gr</item>
        <item>hộp</item>
        <item>kg</item>
        <item>l</item>
        <item>lon</item>
        <item>ly</item>
        <item>ml</item>
        <item>quả</item>
        <item>tạ</item>
        <item>túi</item>

    </string-array>
    <string name="product_name">Product name</string>
    <string name="enter_product_name">Enter product name</string>
    <string name="quantity">Quantity</string>
    <string name="unit">Unit of measurement</string>
    <string name="category">Category</string>
    <string name="expiration_date">Expiration date</string>
    <string name="added_on">Added on</string>
    <string name="barcode">Barcode</string>
    <string name="product_image">Product image</string>
    <string name="choose_one">Choose one</string>
    <string name="add_new">Add new   </string>
    <string name="choose_or_camera">Choose from gallery or take a new picture</string>

    <string name="notification_settings">Notification settings</string>
    <string name="allow_notifications">Allow notifications</string>
    <string name="notify_before">Notify before the EXP day:</string>
    <string name="notification_time">Notification time</string>
    <string name="notify_me_at">Notify me at:</string>
    <string name="sign_out">Sign out</string>
    <string name="contact">Contact</string>
    <string name="contact_via_facebook">Find us on Facebook</string>
    <string name="app_email">letitmake.lim@gmail.com</string>
    <string name="app_facebook">fb://page/108637681299375</string>
    <string name="delete_all_expired">Delete all expired products</string>
    <string name="delete_expired_food">Delete expired foods</string>
    <string name="delete_expired_cosmetic">Delete expired cosmetics</string>
    <string name="delete_expired_medicine">Delete expired medicines</string>
</resources>