<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <import type="com.ecdue.lim.utils.DateTimeUtil"/>
        <variable
            name="product"
            type="com.ecdue.lim.data.Product" />
        <variable
            name="imageSource"
            type="android.graphics.Bitmap" />
    </data>

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:scrollbarAlwaysDrawVerticalTrack="false"
        android:scrollbarStyle="outsideOverlay">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:padding="20dp">

            <TextView
                android:id="@+id/edt_add_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:fontFamily="@font/quicksand"
                android:text="@{product.name}"
                android:textSize="17sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <TextView
                android:id="@+id/edt_add_quantity"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:fontFamily="@font/quicksand"
                android:text="@{(product.quantity > 0) ? String.valueOf(product.quantity) + ` ` + product.unit : `unkown`}"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/quicksand_bold"
                android:text="@string/product_name"
                android:textColor="@color/teal_200"
                android:textSize="17sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/quicksand_bold"
                android:text="@string/quantity"
                android:textColor="@color/teal_200"
                android:textSize="17sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edt_add_name" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/quicksand_bold"
                android:text="@string/category"
                android:textColor="@color/teal_200"
                android:textSize="17sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edt_add_quantity" />

            <TextView
                android:id="@+id/edt_add_exp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:fontFamily="@font/quicksand"
                android:text="@{DateTimeUtil.milliSecToString(product.expire, DateTimeUtil.DEFAULT_DATE_FORMAT)}"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView4" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/quicksand_bold"
                android:text="@string/expiration_date"
                android:textColor="@color/teal_200"
                android:textSize="17sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rdo_add_unit_choice" />

            <TextView
                android:id="@+id/rdo_add_unit_choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                android:textSize="16sp"
                android:fontFamily="@font/quicksand"
                android:text="@{product.category}"
                app:layout_constraintTop_toBottomOf="@+id/textView3" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/quicksand_bold"
                android:text="@string/barcode"
                android:textColor="@color/teal_200"
                android:textSize="17sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edt_add_exp" />

            <TextView
                android:id="@+id/edt_add_barcode"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:text="@{product.barcode}"
                android:fontFamily="@font/quicksand"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView8" />


            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/quicksand_bold"
                android:text="@string/product_image"
                android:textColor="@color/teal_200"
                android:textSize="17sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edt_add_barcode" />

            <ImageView
                android:id="@+id/img_add_product_image"
                android:layout_width="200dp"
                android:layout_height="200dp"
                app:layout_constraintStart_toStartOf="parent"
                app:imageUrl="@{product}"
                app:layout_constraintTop_toBottomOf="@+id/textView10" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>